setup install.py and add readme docs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-# Object file
-*.o
+# elastic files
+#elasticsearch-8.1.0-darwin-x86_64.tar.gz.sha512
+#elasticsearch-8.1.0-darwin-x86_64.tar.gz
+#elasticsearch-8.1.0
 
-# Ada Library Information
-*.ali
+
+
